# deribit_bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKTESTING_PAGE_REVAMP.md  Dockerfile  ENHANCED_PRD.md  README.md  STREAMLIT_DEPLOYMENT.md  SYSTEM_SUMMARY.md  UI_IMPROVEMENTS_SUMMARY.md  analyze_weekly_sentiment.py  classify_all_articles.py  combine_datasets.py  complete_system_demo.py  discover_page2.py  docker-compose.yml  integrate_all_data.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  resume_scraping.py  run_full_playwright.py  scrape_all_126_articles.py  scrape_page2.py  scrape_page2_batch.py  streamlit_app.py  test_backtest_fix.py  test_dashboard.py  test_playwright.py
.streamlit/: config.toml
app/: main.py  ui_dashboard_backup.py
app/analytics/: date_correlation_engine.py  db_weekly_notes.py  schedule_refresh.py  unified_options_analyzer.py  weekly_notes_aggregations.py  weekly_notes_analyzer.py
app/backtesting/: event_study_engine.py  options_backtester.py
app/core/: config.py  logging.py
app/dashboard/: enhanced_dashboard.py
app/ingestion/: db_loader.py
app/market_data/: coingecko_client.py  enhanced_price_fetcher.py  event_study.py  price_correlator.py  price_data_loader.py  returns_helper.py
app/ml/: demo_production.py  ensemble_scorer.py  ensemble_scorer_backup.py  extract_articles.py  feature_extractors.py  finbert_model.py  multimodal_scorer.py  production_scorer_backup.py  sentiment_service.py  test_multimodal.py  xgboost_model.py
app/notifications/: telegram_bot.py
app/optimization/: model_optimizer.py
app/scoring/: flow_scorer.py
dashboard/: streamlit_dashboard.py
demo_results/: enhanced_prd_complete_demo.json
examples/: complete_analysis_demo.py  demo_price_data_usage.py
scraped_data/: all_126_articles_discovered.json  all_option_flows_articles.json  articles_discovered.json  articles_processed.json
scripts/: format_price_data.py  sanitize_test_results.py
sql/: init.sql
test_results/: event_study.csv  image_analysis.json  image_analysis.metrics.json  image_analysis.progress.json
(+40 files in other folders)
